admin UI KST parameters
